Fix spacing on card 3

--- a/components/card/_card.scss
+++ b/components/card/_card.scss
@@ -31,7 +31,7 @@
   &.su_img-fill {
 
     .su_card-image {
-      margin: -1.25rem -1.5rem 1rem -1.5rem;
+      margin: -1.5rem -1.5rem 1.5rem -1.5rem;
     }
 
   }
